--- a/src/main/resources/web/zul/main.zul
+++ b/src/main/resources/web/zul/main.zul
@@ -19,21 +19,23 @@
 -->
 <!-- <?init class="cat.iciq.tcg.labbook.zk.ui.LoginInitiator"?> -->
 <?meta name="viewport" content="width=device-width, initial-scale=1"?>
-<?link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico"?>
-<?link rel="icon" type="image/x-icon" href="../images/favicon.ico"?>
+<?link rel="shortcut icon" type="image/x-icon" href="~./img/favicon.ico"?>
+<?link rel="icon" type="image/x-icon" href="~./img/favicon.ico"?>
 
-<?link rel="stylesheet" type="text/css" href="../html/xslt/css/font-awesome.min.css" ?>
-<?link rel="stylesheet" type="text/css" href="../html/css/bootstrap-create.css"?>
-<?link rel="stylesheet" type="text/css" href="../html/xslt/css/bootstrap.min.css"?>
+<?link rel="stylesheet" type="text/css" href="~./css/font-awesome.min.css" ?>
+<?link rel="stylesheet" type="text/css" href="~./css/bootstrap-create.css"?>
+<?link rel="stylesheet" type="text/css" href="~./css/bootstrap.min.css"?>
 
 
 <window xmlns:n="native" xmlns:w="client" id="mainWindow" border="none" apply="org.ICIQ.eChempad.web.ui.Main" style="height: 100%; width:100%">
 
+    <!-- Part of the CML transformations, we do not need it
     <script src="../html/xslt/js/popper.min.js"></script>
     <script src="../html/xslt/js/jquery-3.3.1.min.js"></script>
     <script src="../html/xslt/js/bootstrap.min.js"></script>
     <script src="../html/xslt/jsmol/JSmol.min.nojq.js"></script>
     <script src="../html/xslt/js/jsmol.js"></script>
+    -->
 
     <script type="text/javascript">
         <![CDATA[
@@ -157,7 +159,7 @@
     </script>
 
 
-    <!-- <include src="main/elementPublish.zul" mode="defer" /> -->
+    <include src="~./zul/elementPublish.zul" mode="defer" />
 
     <n:nav class="navbar navbar-expand navbar-light bg-light" style="height:60px">
         <n:button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -222,6 +224,8 @@
 
     <!-- Large layout -->
     <borderlayout id="mainLarge" vflex="1">
+
+
         <center id="treeLayout">
             <div id="treeDiv" height="100%">
                 <tabbox id="mainTab" height="100%">
@@ -244,8 +248,12 @@
                 </tabbox>
             </div>
         </center>
+
+
         <east id="propertiesEast" splittable="true" collapsible="false" size="50%" >
             <borderlayout id="propertiesLayout">
+
+
                 <north id="propertiesNorth"  splittable="true" collapsible="false" size="50%" >
                     <div id="properties" hflex="1" vflex="1">
                         <div id="welcome" height="100%" visible="true" sclass="z-tabbox" >
