--- a/src/main/resources/web/zul/main.zul
+++ b/src/main/resources/web/zul/main.zul
@@ -29,13 +29,12 @@
 
 <window xmlns:n="native" xmlns:w="client" id="mainWindow" border="none" apply="org.ICIQ.eChempad.web.ui.Main" style="height: 100%; width:100%">
 
-    <!-- Part of the CML transformations, we do not need it
-    <script src="../html/xslt/js/popper.min.js"></script>
-    <script src="../html/xslt/js/jquery-3.3.1.min.js"></script>
-    <script src="../html/xslt/js/bootstrap.min.js"></script>
-    <script src="../html/xslt/jsmol/JSmol.min.nojq.js"></script>
-    <script src="../html/xslt/js/jsmol.js"></script>
-    -->
+    <!-- Part of the CML transformations, we do not need it -->
+    <script src="~./web/js/popper.min.js"></script>
+    <script src="~./web/js/jquery-3.3.1.min.js"></script>
+    <script src="~./web/js/bootstrap.min.js"></script>
+    <!-- JS mol <script src="../html/xslt/jsmol/JSmol.min.nojq.js"></script>
+    <script src="~./web/js/jsmol.js"></script> -->
 
     <script type="text/javascript">
         <![CDATA[
@@ -163,7 +162,7 @@
 
     <n:nav class="navbar navbar-expand navbar-light bg-light" style="height:60px">
         <n:button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"/>
         </n:button>
         <n:div class="collapse navbar-collapse" id="navbarSupportedContent">
             <n:ul class="navbar-nav mr-auto">
@@ -186,7 +185,9 @@
                     </n:div>
                 </n:li>
                 <n:li class="nav-item d-none d-md-block" style="border-left: 2px solid white;">
-                    <n:a class="nav-link" href="#" onClick="fireEventFromClient('onBrowseClick')"><n:image src="../images/browse-small.png" class="navbar-brand" href="#"></n:image></n:a>
+                    <n:a class="nav-link" href="#" onClick="fireEventFromClient('onBrowseClick')">
+                        <n:image src="img/browse-small.png" class="navbar-brand" href="#"></n:image>
+                    </n:a>
                 </n:li>
             </n:ul>
         </n:div>
@@ -202,7 +203,6 @@
 
             </div>
             <div id="smallItemDetails">
-
 
             </div>
         </div>
@@ -241,9 +241,9 @@
                         <tabpanel style="overflow:auto">
                             <include src="~./zul/search.zul"/>
                         </tabpanel>
-                        <!-- <tabpanel style="overflow:auto">
+                        <tabpanel style="overflow:auto">
                             <include src="~./zul/reportManager.zul"/>
-                        </tabpanel> -->
+                        </tabpanel>
                     </tabpanels>
                 </tabbox>
             </div>
@@ -259,7 +259,7 @@
                         <div id="welcome" height="100%" visible="true" sclass="z-tabbox" >
                             <groupbox id="groupWelcome" closable="false"  hflex="1" vflex="1" >
                                 <div hflex="1" vflex="1">
-                                    <iframe id="newsFrame" hflex="1" vflex="1" src="../html/news.html"/>
+                                    <iframe id="newsFrame" hflex="1" vflex="1" src="~./web/html/news.html"/>
                                 </div>
                             </groupbox>
                         </div>
